--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </div>
 </div>
 <div class="section">
-    <button class="accordion" onclick="togglePanel('diskussionPanel')">💬 Diskussionsaufgaben für unseren Sprachklub am 08.03</button>
+    <button class="accordion" onclick="togglePanel('diskussionPanel')">💬 Diskussionsaufgaben für unseren Sprachklub</button>
     <div class="panel" id="diskussionPanel">
         <div class="section">
             <button class="accordion" onclick="togglePanel('runde1')">🧠 Runde 1 (15 min) - Thesen zum Thema Stress</button>
